ADDED: Accessing environment variables from Lambda. Type-safe result handling in tests.

--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "devDependencies": {
     "@types/aws-lambda": "0.0.16",
     "@types/chai": "4.0.4",
+    "@types/chance": "0.7.35",
     "@types/mocha": "2.2.42",
+    "@types/node": "8.0.26",
     "chai": "4.1.2",
+    "chance": "1.0.11",
     "mocha": "3.5.0",
     "serverless-offline": "3.15.3",
     "serverless-plugin-typescript": "1.1.2",
