--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   ],
   "author": "György Balássy",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/balassy/aws-lambda-typescript.git"
+  },
   "devDependencies": {
     "@types/aws-lambda": "0.0.16",
     "@types/chai": "4.0.4",
