--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "analyse": "npm run lint && npm run test",
     "clean": "rimraf .build .serverless .nyc_output coverage",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "prebuild": "npm run clean && npm run analyse",
     "build": "serverless package",
     "predeploy": "npm run clean && npm run analyse",
@@ -36,6 +37,7 @@
     "@types/node": "8.0.28",
     "chai": "4.1.2",
     "chance": "1.0.11",
+    "coveralls": "2.13.1",
     "mocha": "3.5.2",
     "nyc": "11.2.1",
     "rimraf": "2.6.2",
