CHANGED: Ensure that the coverage report is not linted.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "forceConsistentCasingInFileNames": true
   },
   "exclude": [ 
-    "node_modules"
+    "node_modules",
+    "coverage"
    ]
 }
