--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "serverless-offline": "3.15.3",
     "serverless-plugin-typescript": "1.1.2",
     "source-map-support": "0.4.18",
+    "ts-mockito": "2.1.1",
     "ts-node": "3.3.0",
     "tslint": "5.7.0"
   }
