REFACTORED: Introduced the Controller layer, renamed existing controller to service.

--- a/.nycrc
+++ b/.nycrc
@@ -6,7 +6,8 @@
     "test/**/*",
     "**/*.d.ts",
     "**/*.spec.ts",
-    "**/*.interfaces.ts"
+    "**/*.interfaces.ts",
+    "src/cities/cities.ts"
   ],
   "extension": [
     ".ts"
