--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mocha": "3.5.2",
     "nyc": "11.2.1",
     "rimraf": "2.6.2",
+    "serverless-aws-documentation": "0.8.0",
     "serverless-offline": "3.15.3",
     "serverless-plugin-typescript": "1.1.2",
     "source-map-support": "0.4.18",
