ADDED: The Swagger document title and version is read from the .yml file.

--- a/serverless.yml
+++ b/serverless.yml
@@ -32,6 +32,8 @@ functions:
       REGION_NAME: ${self:provider.region}
       REST_API_NAME: ${self:service}
       STAGE_NAME: ${self:provider.stage}
+      API_INFO_VERSION: ${file(./swagger/documentation.yml):api.info.version}
+      API_INFO_TITLE: ${file(./swagger/documentation.yml):api.info.title}
 
     events:
       - http:
