ADDED: Deployment to custom domain with custom base path (see Issue #8).

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "serverless package",
     "predeploy": "npm run clean && npm run analyse",
     "deploy": "serverless deploy",
+    "deploy:init": "serverless create_domain",
     "lint": "tslint --project . --format verbose",
     "start": "serverless offline start",
     "pretest": "npm run clean",
@@ -43,6 +44,7 @@
     "nyc": "11.2.1",
     "rimraf": "2.6.2",
     "serverless-aws-documentation": "0.8.0",
+    "serverless-domain-manager": "1.1.12",
     "serverless-offline": "3.15.3",
     "serverless-plugin-typescript": "1.1.2",
     "source-map-support": "0.4.18",
