ADDED: Health check endpoints (requirement for Issue #2).

--- a/.nycrc
+++ b/.nycrc
@@ -8,6 +8,7 @@
     "**/*.spec.ts",
     "**/*.interfaces.ts",
     "src/cities/cities.ts",
+    "src/health/health.ts",
     "src/swagger/swagger.ts"
   ],
   "extension": [
