--- a/serverless.yml
+++ b/serverless.yml
@@ -42,6 +42,48 @@ functions:
           method: get
           cors: true
 
+  getHealthCheck:
+    handler: src/health/health.getHealthCheck
+    description: Returns the result of a quick health check of the API.
+
+    events:
+      - http:
+          path: health/check
+          method: get
+          cors: true
+          documentation:
+            summary: Returns the result of a quick health check of the API.
+            tags:
+              - Health
+            description: Returns the result of a quick health check of the API.
+            methodResponses:
+              - statusCode: '200'
+                description: Returned when the operation is completed successfully.
+                responseModels:
+                  "application/json": GetHealthCheck
+              - ${file(./swagger/error-responses/internal-server-error.yml)}
+
+  getHealthCheckDetailed:
+    handler: src/health/health.getHealthCheckDetailed
+    description: Returns the result of a detailed health check of the API.
+
+    events:
+      - http:
+          path: health/detailed
+          method: get
+          cors: true
+          documentation:
+            summary: Returns the result of a detailed health check of the API.
+            tags:
+              - Health
+            description: Returns the result of a detailed health check of the API.
+            methodResponses:
+              - statusCode: '200'
+                description: Returned when the operation is completed successfully.
+                responseModels:
+                  "application/json": GetHealthCheckDetailed
+              - ${file(./swagger/error-responses/internal-server-error.yml)}
+
   getCity:
     handler: src/cities/cities.getCity
     description: Returns a single city.
