--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ install:
   - set CI=true
   - npm install --global npm@latest
   - set PATH=%APPDATA%\npm;%PATH%
+  - npm install -g serverless
   - npm install
   - node --version
   - npm --version
@@ -19,5 +20,6 @@ shallow_clone: true
 
 build_script:
   - npm run build
+  - npm run coverage
 
 test: off
