ADDED: Post-deploy integration tests. See Issue #2.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "predeploy": "npm run clean && npm run analyse",
     "deploy": "serverless deploy",
     "deploy:init": "serverless create_domain",
+    "postdeploy": "npm run test:integration",
     "lint": "tslint --project . --format verbose",
     "start": "serverless offline start",
     "pretest": "npm run clean",
-    "test": "nyc mocha"
+    "test": "nyc mocha",
+    "test:integration": "mocha --opts ./test/integration/mocha.opts"
   },
   "keywords": [
     "aws",
@@ -36,12 +38,15 @@
     "@types/chance": "0.7.35",
     "@types/mocha": "2.2.43",
     "@types/node": "8.0.28",
+    "@types/request": "2.0.4",
+    "@types/request-promise-native": "1.0.7",
     "aws-sdk": "2.118.0",
     "chai": "4.1.2",
     "chance": "1.0.11",
     "coveralls": "2.13.1",
     "mocha": "3.5.2",
     "nyc": "11.2.1",
+    "request-promise-native": "1.0.5",
     "rimraf": "2.6.2",
     "serverless-aws-documentation": "0.8.0",
     "serverless-domain-manager": "1.1.12",
