--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,18 @@ node_js:
   - "8"
 
 before_install:
-- npm install -g serverless
+  - npm install -g npm@5
+  - npm install -g serverless
+  - npm install -g greenkeeper-lockfile@1
 
-after_success: 
-- npm run coverage
+before_script:
+  - greenkeeper-lockfile-update
+
+after_script:
+  - greenkeeper-lockfile-upload
+
+after_success:
+  - npm run coverage
 
 script:
   - npm run build
