--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "serverless-domain-manager": "1.1.16",
     "serverless-offline": "3.16.0",
     "serverless-plugin-typescript": "1.1.3",
+    "serverless-stack-output": "0.2.0",
     "source-map-support": "0.5.0",
     "ts-mockito": "2.2.5",
     "ts-node": "3.3.0",
