--- a/package.json
+++ b/package.json
@@ -33,29 +33,29 @@
     "url": "git://github.com/balassy/aws-lambda-typescript.git"
   },
   "devDependencies": {
-    "@types/aws-lambda": "0.0.20",
-    "@types/chai": "4.0.4",
-    "@types/chance": "0.7.35",
-    "@types/mocha": "2.2.44",
-    "@types/node": "8.0.51",
-    "@types/request": "2.0.8",
-    "@types/request-promise-native": "1.0.10",
-    "aws-sdk": "2.149.0",
-    "chai": "4.1.2",
-    "chance": "1.0.12",
-    "coveralls": "3.0.0",
-    "mocha": "4.0.1",
-    "nyc": "11.3.0",
-    "request-promise-native": "1.0.5",
-    "rimraf": "2.6.2",
-    "serverless-aws-documentation": "1.0.0",
+    "@types/aws-lambda": "^0.0.20",
+    "@types/chai": "^4.0.4",
+    "@types/chance": "^0.7.35",
+    "@types/mocha": "^2.2.44",
+    "@types/node": "^8.0.51",
+    "@types/request": "^2.0.8",
+    "@types/request-promise-native": "^1.0.10",
+    "aws-sdk": "^2.149.0",
+    "chai": "^4.1.2",
+    "chance": "^1.0.12",
+    "coveralls": "^3.0.0",
+    "mocha": "^4.0.1",
+    "nyc": "^11.3.0",
+    "request-promise-native": "^1.0.5",
+    "rimraf": "^2.6.2",
+    "serverless-aws-documentation": "^1.0.0",
     "serverless-domain-manager": "1.1.18",
-    "serverless-offline": "3.16.0",
-    "serverless-plugin-typescript": "1.1.3",
-    "serverless-stack-output": "0.2.0",
-    "source-map-support": "0.5.0",
-    "ts-mockito": "2.2.5",
-    "ts-node": "3.3.0",
-    "tslint": "5.8.0"
+    "serverless-offline": "^3.16.0",
+    "serverless-plugin-typescript": "^1.1.3",
+    "serverless-stack-output": "^0.2.0",
+    "source-map-support": "^0.5.0",
+    "ts-mockito": "^2.2.5",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0"
   }
 }
