UPDATED: Package nyc is updated to 13.1.0.

--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "chance": "^1.0.16",
     "coveralls": "^3.0.2",
     "mocha": "^5.2.0",
-    "nyc": "^12.0.2",
+    "nyc": "^13.1.0",
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
     "serverless-aws-documentation": "^1.1.0",
-    "serverless-domain-manager": "2.6.5",
+    "serverless-domain-manager": "^2.6.5",
     "serverless-offline": "^3.25.11",
     "serverless-plugin-typescript": "^1.1.5",
     "serverless-stack-output": "^0.2.3",
