--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,11 @@
 environment:
   matrix:
-    - nodejs_version: '8'
-    - nodejs_version: '6'
+    - nodejs_version: 'LTS'
+    - nodejs_version: 'Current'
 
 install:
+  - node --version
+  - npm --version
   - ps: Install-Product node $env:nodejs_version
   - set CI=true
   - npm install --global npm@latest
