UPDATED: All devDependencies are updated to the latest version.

--- a/package.json
+++ b/package.json
@@ -33,29 +33,30 @@
     "url": "git://github.com/balassy/aws-lambda-typescript.git"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.22",
+    "@types/aws-lambda": "^8.10.27",
     "@types/chai": "^4.1.7",
-    "@types/chance": "^1.0.1",
-    "@types/mocha": "^5.2.6",
+    "@types/chance": "^1.0.4",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.8",
     "@types/request": "^2.48.1",
-    "@types/request-promise-native": "^1.0.15",
+    "@types/request-promise-native": "^1.0.16",
     "aws-sdk": "^2.476.0",
     "chai": "^4.2.0",
     "chance": "^1.0.18",
-    "coveralls": "^3.0.3",
-    "mocha": "^6.0.2",
+    "coveralls": "^3.0.4",
+    "mocha": "^6.1.4",
     "nyc": "^14.0.0",
     "request-promise-native": "^1.0.7",
     "rimraf": "^2.6.3",
     "serverless-aws-documentation": "^1.1.0",
-    "serverless-domain-manager": "^3.1.0",
+    "serverless-domain-manager": "^3.2.2",
     "serverless-offline": "^5.0.0",
-    "serverless-plugin-typescript": "^1.1.5",
+    "serverless-plugin-typescript": "^1.1.7",
     "serverless-stack-output": "^0.2.3",
-    "source-map-support": "^0.5.10",
+    "source-map-support": "^0.5.12",
     "ts-mockito": "^2.3.1",
-    "ts-node": "^8.0.3",
-    "tslint": "^5.13.1"
+    "ts-node": "^8.3.0",
+    "tslint": "^5.17.0",
+    "typescript": "^3.5.2"
   }
 }
